fixed: background not showing up

--- a/pages/page1/assets/css/style.css
+++ b/pages/page1/assets/css/style.css
@@ -57,7 +57,7 @@ body {
 .section .background {
     width: 100%;
     height: 100%;
-    background-image: url('assets/img/background.gif');
+    background-image: url('../img/background.gif');
     background-size: 100%;
     z-index: -1;
 }
